Fixing main wrapping divs, clearfix hover-controller

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -42,6 +42,11 @@ body {
 }
 
 #main {
+  position: absolute;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  padding : 3%;
   transition: background-color .5s;
 }
 
@@ -52,7 +57,6 @@ body {
 #hover-controller {
   height: 100%;
   width: 100%;
-  border: 1px solid blue;
 }
 
 /* Login Pages */
@@ -181,6 +185,10 @@ body {
 
 /* Header */
 
+nav.navbar {
+  margin-bottom: 0;
+}
+
 .navbar-brand {
   font-family: caecilia, times, serif;
 }
@@ -220,11 +228,6 @@ div.navbar-brand.navbar-brand-centered:hover {
 /* Static Pages */
 
 /* Journal Index */
-#main {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-}
 
 .index-title-wrapper {
   height: 100px;
@@ -361,7 +364,10 @@ input#new-journal-submit {
 }
 
 .journal-show-row {
-  margin: 1%;
+  position: absolute;
+  margin: 20px 0 0 0;
+  height: 100%;
+  width: 100%;
 }
 
 .col-title {
